Added GameObject.h and .cpp. Added an uncreated/unused InputManager.h and .cpp. Also, added basic input with GLFW (needs to be put into Input Manager). Allows for the creation of multiple game objects.

--- a/OpenGLEngine/~AutoRecover.OpenGLEngine.vcxproj
+++ b/OpenGLEngine/~AutoRecover.OpenGLEngine.vcxproj
@@ -83,12 +83,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="GameObject.cpp" />
+    <ClCompile Include="GameWorld.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="ShaderManager.cpp" />
     <ClCompile Include="Shape.cpp" />
     <ClCompile Include="WindowManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="GameObject.h" />
+    <ClInclude Include="GameWorld.h" />
     <ClInclude Include="ShaderManager.h" />
     <ClInclude Include="Shape.h" />
     <ClInclude Include="WindowManager.h" />
