Added a Camera. (Need to make it so that the camera moves from holding down the button.) Added the functionality to read in Models from the file format .obj. Updated the Shaders to create lighting from above.

--- a/OpenGLEngine/OpenGLEngine.vcxproj
+++ b/OpenGLEngine/OpenGLEngine.vcxproj
@@ -61,7 +61,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>glew32.lib;glfw3.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glew32.lib;glfw3.lib;opengl32.lib;SOIL.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -98,6 +98,7 @@
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="GameWorld.h" />
     <ClInclude Include="InputManager.h" />
+    <ClInclude Include="MatrixData.h" />
     <ClInclude Include="ModelLoaderManager.h" />
     <ClInclude Include="ShaderManager.h" />
     <ClInclude Include="Shape.h" />
