--- a/OpenGLEngine/OpenGLEngine.vcxproj.filters
+++ b/OpenGLEngine/OpenGLEngine.vcxproj.filters
@@ -68,6 +68,9 @@
     <ClInclude Include="CameraObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MatrixData.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Shaders\vertexShader.glsl">
